--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "kaleido==0.2.1",
+    "plotly>=6.0.0",
+    "sqlalchemy>=2.0.38",
+    "sqlalchemy-cratedb>=0.41.0",
+]
