--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "kaleido==0.2.1",
+    "pandas>=2.2.3",
     "plotly>=6.0.0",
     "sqlalchemy>=2.0.38",
     "sqlalchemy-cratedb>=0.41.0",
